bindings/c/whiteout_m2.h

typedef struct whiteout_M2PhysicsCollision whiteout_M2PhysicsCollision;
typedef struct whiteout_M2SkinSection whiteout_M2SkinSection;
/* ── M2PhysicsCollision ─────────────────────────────────────────────── */

whiteout_M2PhysicsCollision* whiteout_m2_M2PhysicsCollision_new(void);
void whiteout_m2_M2PhysicsCollision_delete(whiteout_M2PhysicsCollision* self);
size_t whiteout_m2_M2PhysicsCollision_get_vertexPositions_count(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_resize_vertexPositions(whiteout_M2PhysicsCollision* self, size_t count);
const float* whiteout_m2_M2PhysicsCollision_get_vertexPositions_data(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_assign_vertexPositions(whiteout_M2PhysicsCollision* self, const float* data, size_t count);
size_t whiteout_m2_M2PhysicsCollision_get_faceNormals_count(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_resize_faceNormals(whiteout_M2PhysicsCollision* self, size_t count);
const float* whiteout_m2_M2PhysicsCollision_get_faceNormals_data(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_assign_faceNormals(whiteout_M2PhysicsCollision* self, const float* data, size_t count);
size_t whiteout_m2_M2PhysicsCollision_get_indices_count(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_resize_indices(whiteout_M2PhysicsCollision* self, size_t count);
const int16_t* whiteout_m2_M2PhysicsCollision_get_indices_data(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_assign_indices(whiteout_M2PhysicsCollision* self, const int16_t* data, size_t count);
size_t whiteout_m2_M2PhysicsCollision_get_flags_count(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_resize_flags(whiteout_M2PhysicsCollision* self, size_t count);
const int16_t* whiteout_m2_M2PhysicsCollision_get_flags_data(const whiteout_M2PhysicsCollision* self);
void whiteout_m2_M2PhysicsCollision_assign_flags(whiteout_M2PhysicsCollision* self, const int16_t* data, size_t count);
/* ── M2SkinSection ─────────────────────────────────────────────── */

whiteout_M2SkinSection* whiteout_m2_M2SkinSection_new(void);
void whiteout_m2_M2SkinSection_delete(whiteout_M2SkinSection* self);
uint16_t whiteout_m2_M2SkinSection_get_skinSectionId(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_skinSectionId(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_level(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_level(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_vertexStart(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_vertexStart(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_vertexCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_vertexCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_indexStart(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_indexStart(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_indexCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_indexCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneComboIndex(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneComboIndex(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneInfluences(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneInfluences(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_centerBoneIndex(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_centerBoneIndex(whiteout_M2SkinSection* self, uint16_t value);
whiteout_Vector3f* whiteout_m2_M2SkinSection_get_centerPosition(whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_centerPosition(whiteout_M2SkinSection* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2SkinSection_get_sortCenterPosition(whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_sortCenterPosition(whiteout_M2SkinSection* self, const whiteout_Vector3f* value);
float whiteout_m2_M2SkinSection_get_sortRadius(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_sortRadius(whiteout_M2SkinSection* self, float value);