bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2PhysicsCollision --
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_new = find(
        "whiteout_m2_M2PhysicsCollision_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_delete = find(
        "whiteout_m2_M2PhysicsCollision_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_vertexPositions_count = find("whiteout_m2_M2PhysicsCollision_get_vertexPositions_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_resize_vertexPositions = find("whiteout_m2_M2PhysicsCollision_resize_vertexPositions", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_vertexPositions_data = find("whiteout_m2_M2PhysicsCollision_get_vertexPositions_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_assign_vertexPositions = find("whiteout_m2_M2PhysicsCollision_assign_vertexPositions", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_faceNormals_count = find("whiteout_m2_M2PhysicsCollision_get_faceNormals_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_resize_faceNormals = find("whiteout_m2_M2PhysicsCollision_resize_faceNormals", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_faceNormals_data = find("whiteout_m2_M2PhysicsCollision_get_faceNormals_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_assign_faceNormals = find("whiteout_m2_M2PhysicsCollision_assign_faceNormals", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_indices_count = find("whiteout_m2_M2PhysicsCollision_get_indices_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_resize_indices = find("whiteout_m2_M2PhysicsCollision_resize_indices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_indices_data = find("whiteout_m2_M2PhysicsCollision_get_indices_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_assign_indices = find("whiteout_m2_M2PhysicsCollision_assign_indices", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_flags_count = find("whiteout_m2_M2PhysicsCollision_get_flags_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_resize_flags = find("whiteout_m2_M2PhysicsCollision_resize_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_get_flags_data = find("whiteout_m2_M2PhysicsCollision_get_flags_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PhysicsCollision_assign_flags = find("whiteout_m2_M2PhysicsCollision_assign_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- M2SkinSection --
    public static final MethodHandle whiteout_m2_M2SkinSection_new = find(
        "whiteout_m2_M2SkinSection_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_delete = find(
        "whiteout_m2_M2SkinSection_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_skinSectionId = find("whiteout_m2_M2SkinSection_get_skinSectionId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_skinSectionId = find("whiteout_m2_M2SkinSection_set_skinSectionId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_level = find("whiteout_m2_M2SkinSection_get_level", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_level = find("whiteout_m2_M2SkinSection_set_level", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_vertexStart = find("whiteout_m2_M2SkinSection_get_vertexStart", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_vertexStart = find("whiteout_m2_M2SkinSection_set_vertexStart", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_vertexCount = find("whiteout_m2_M2SkinSection_get_vertexCount", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_vertexCount = find("whiteout_m2_M2SkinSection_set_vertexCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_indexStart = find("whiteout_m2_M2SkinSection_get_indexStart", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_indexStart = find("whiteout_m2_M2SkinSection_set_indexStart", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_indexCount = find("whiteout_m2_M2SkinSection_get_indexCount", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_indexCount = find("whiteout_m2_M2SkinSection_set_indexCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_boneCount = find("whiteout_m2_M2SkinSection_get_boneCount", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_boneCount = find("whiteout_m2_M2SkinSection_set_boneCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_boneComboIndex = find("whiteout_m2_M2SkinSection_get_boneComboIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_boneComboIndex = find("whiteout_m2_M2SkinSection_set_boneComboIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_boneInfluences = find("whiteout_m2_M2SkinSection_get_boneInfluences", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_boneInfluences = find("whiteout_m2_M2SkinSection_set_boneInfluences", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_centerBoneIndex = find("whiteout_m2_M2SkinSection_get_centerBoneIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_centerBoneIndex = find("whiteout_m2_M2SkinSection_set_centerBoneIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_centerPosition = find("whiteout_m2_M2SkinSection_get_centerPosition", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_centerPosition = find("whiteout_m2_M2SkinSection_set_centerPosition", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_sortCenterPosition = find("whiteout_m2_M2SkinSection_get_sortCenterPosition", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_sortCenterPosition = find("whiteout_m2_M2SkinSection_set_sortCenterPosition", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_get_sortRadius = find("whiteout_m2_M2SkinSection_get_sortRadius", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2SkinSection_set_sortRadius = find("whiteout_m2_M2SkinSection_set_sortRadius", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
